--- a/app/src/main/res/layout/activity_images_display.xml
+++ b/app/src/main/res/layout/activity_images_display.xml
@@ -20,8 +20,10 @@
 	
 	<LinearLayout
 		android:id="@+id/linearLayout2"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="48dp"
+		android:layout_marginTop="5dp"
+		android:layout_marginBottom="5dp"
 		android:gravity="center"
 		android:orientation="horizontal"
 		android:padding="5dp"
@@ -31,11 +33,11 @@
 		
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/imagesDisplay_button_repost"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="match_parent"
 			android:layout_marginStart="5dp"
 			android:layout_marginEnd="5dp"
-			android:layout_weight="1"
+			android:layout_weight="1.3"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
 			android:text="21"
@@ -46,11 +48,11 @@
 		
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/imagesDisplay_button_comment"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="match_parent"
 			android:layout_marginStart="5dp"
 			android:layout_marginEnd="5dp"
-			android:layout_weight="1"
+			android:layout_weight="1.3"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
 			android:text="21"
@@ -59,35 +61,41 @@
 			app:iconGravity="textStart"
 			app:iconTint="@color/normal_text"/>
 		
-		<com.google.android.material.button.MaterialButton
+		<androidx.appcompat.widget.AppCompatImageButton
 			android:id="@+id/imagesDisplay_button_down"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="match_parent"
 			android:layout_marginStart="5dp"
 			android:layout_marginEnd="5dp"
 			android:layout_weight="1"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
-			android:text="21"
-			android:textColor="@color/normal_text"
-			app:icon="@drawable/ic_outline_thumb_down_24"
-			app:iconGravity="textStart"
-			app:iconTint="@color/normal_text"/>
+			android:src="@drawable/ic_outline_thumb_down_24"
+			app:tint="@color/normal_text"/>
 		
-		<com.google.android.material.button.MaterialButton
+		<TextView
+			android:id="@+id/imagesDisplay_textView_score"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="0.5"
+			android:gravity="center"
+			android:letterSpacing="0.1"
+			android:text="21"
+			android:textColor="@color/normal_text"
+			android:textSize="15sp"
+			android:textStyle="bold"/>
+		
+		<androidx.appcompat.widget.AppCompatImageButton
 			android:id="@+id/imagesDisplay_button_up"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="match_parent"
 			android:layout_marginStart="5dp"
 			android:layout_marginEnd="5dp"
 			android:layout_weight="1"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
-			android:text="21"
-			android:textColor="@color/normal_text"
-			app:icon="@drawable/ic_outline_thumb_up_24"
-			app:iconGravity="textStart"
-			app:iconTint="@color/normal_text"/>
+			android:src="@drawable/ic_outline_thumb_up_24"
+			app:tint="@color/normal_text"/>
 	
 	</LinearLayout>
 
