--- a/app/src/main/res/layout/main_row_layout.xml
+++ b/app/src/main/res/layout/main_row_layout.xml
@@ -11,6 +11,7 @@
 	android:focusable="true"
 	android:foreground="@drawable/ripple_message_row_foreground"
 	android:longClickable="true"
+	android:paddingTop="4dp"
 	android:paddingBottom="10dp">
 	
 	<de.hdodenhof.circleimageview.CircleImageView
@@ -341,7 +342,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="24dp"
-		android:layout_marginTop="12dp"
+		android:layout_marginTop="8dp"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		app:srcCompat="@drawable/ic_baseline_reply_all_24"/>
