--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,13 +12,13 @@
 	
 	<string-array name="post_visiblities">
 		<item>All can see</item>
-		<item>Friends can see</item>
+		<item>Followers can see</item>
 		<item>No one can see</item>
 	</string-array>
 	
 	<string-array name="reply_visiblities">
 		<item>All can reply</item>
-		<item>Friends can reply</item>
+		<item>Followers can reply</item>
 		<item>No one can reply</item>
 	</string-array>
 	
