--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -1,15 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".ui.fragments.main.drafts.DraftsFragment">
 	
-	<!-- TODO: Update blank fragment layout -->
-	<TextView
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment"/>
-
-</FrameLayout>
+		android:layout_height="match_parent">
+		
+		<com.google.android.material.textfield.TextInputLayout
+			android:id="@+id/drafts_input_search"
+			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="8dp"
+			android:layout_marginTop="8dp"
+			android:layout_marginEnd="8dp"
+			app:endIconMode="clear_text"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:startIconDrawable="@drawable/ic_baseline_search_24">
+			
+			<com.google.android.material.textfield.TextInputEditText
+				android:id="@+id/drafts_edit_search"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="Search"
+				android:inputType="text"
+				android:maxLines="1"/>
+		</com.google.android.material.textfield.TextInputLayout>
+		
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/drafts_recyclerView_main"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_marginStart="8dp"
+			android:layout_marginTop="8dp"
+			android:layout_marginEnd="8dp"
+			android:layout_marginBottom="8dp"
+			android:visibility="gone"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/drafts_input_search">
+		
+		</androidx.recyclerview.widget.RecyclerView>
+		
+		<LinearLayout
+			android:id="@+id/drafts_layout_empty"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_marginStart="8dp"
+			android:layout_marginTop="8dp"
+			android:layout_marginEnd="8dp"
+			android:layout_marginBottom="8dp"
+			android:gravity="center"
+			android:orientation="vertical"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/drafts_input_search">
+			
+			<ImageView
+				android:id="@+id/imageView5"
+				android:layout_width="48dp"
+				android:layout_height="48dp"
+				android:layout_margin="5dp"
+				android:src="@drawable/ic_baseline_error_outline_24"/>
+			
+			<TextView
+				android:id="@+id/textView9"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_margin="5dp"
+				android:text="Nothing Here"
+				android:textAlignment="center"
+				android:textSize="24sp"
+				android:textStyle="bold"/>
+		</LinearLayout>
+	
+	</androidx.constraintlayout.widget.ConstraintLayout>
+	
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/drafts_fab_add"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|end"
+		android:layout_margin="24dp"
+		android:clickable="true"
+		android:contentDescription=""
+		android:src="@drawable/ic_baseline_add_24"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
