--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -54,8 +54,7 @@
 					android:id="@+id/login_editText_email"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:inputType="textPersonName"
-					android:text="RainbowWolfer@Outlook.com"/>
+					android:inputType="textPersonName"/>
 			</com.google.android.material.textfield.TextInputLayout>
 			
 			<com.google.android.material.textfield.TextInputLayout
@@ -77,8 +76,7 @@
 					android:id="@+id/login_editText_password"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:inputType="textPassword"
-					android:text="myspace"/>
+					android:inputType="textPassword"/>
 			</com.google.android.material.textfield.TextInputLayout>
 			
 			<com.google.android.material.button.MaterialButton
